--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@ console.log("参数v1内容："+v);
 console.log("参数wd1内容："+wd);
 console.log("参数G_url1内容："+G_url);
 function upInfo(namewd,nameurl,namev,nameflag,nameplayurl) {
-       var zcf='./yunso.x.html'
-       var zcs='./play/'
+       var zcf='./yunso.x.html';
+       //var zcs='./play/';
+       var zcs='index2v.html';
        var wd=namewd;
        var G_url=nameurl;
        var v=namev;
