--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="pragma" content="no-cache" /><meta http-equiv="expires" content="0" />
 <meta name="keywords" content="vip视频解析,vip视频在线解析,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析" />
 <meta name="description" content="XyPlayer 智能解析为您免费解析主流视频网站的VIP视频,支持爱奇艺、腾讯、优酷、乐视、芒果、搜狐、PPTV等等，可搜索最新的免费福利视频、电影和电视剧资源，欢迎使用！" />   
-<title>XyPlayer 智能解析 X3</title> 
+<title id="info">XyPlayer 智能解析 X3</title> 
 <style>
 html,body{overflow:hidden;  
 width:100%;
