--- a/index2v.html
+++ b/index2v.html
@@ -249,7 +249,7 @@ var videoObject = {
      player:'#player',	        //视频DIV容器,忽略时为'#player';
 	 playad:'#playad',	        //广告DIV容器,忽略时为'#playad';
 	 autohide:false,             //是否自动隐藏列表,忽略时为false;
-	 api: 'https://x3.nohacks.cn/api.php',                 //api地址,忽略时为'api.php'	
+	 api: 'https://parse.xymov.net/api.php',                 //api地址,忽略时为'api.php'	(https://x3.nohacks.cn/api.php)
 	 loadimg: 'templets/byg//images/loading.gif'   //加载动画,忽略时为空。
 };
  xyplay=new xyplayer(videoObject);
