--- a/404.html
+++ b/404.html
@@ -13,10 +13,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><!-- 强制使用当前版本的兼容模式 -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/><!-- 
 手机H5兼容模式 -->
-	<script type="text/javascript" src="./include/jquery.min.js"></script>
-  <script type="text/javascript"  src="./include/class.main.js" ></script>
-    <link href="./include/jquery.autocomplete.css" rel="stylesheet">
-<script type="text/javascript" src="./include/jquery.autocomplete.js"></script>
+	<script type="text/javascript" src="/include/jquery.min.js"></script>
+  <script type="text/javascript"  src="/include/class.main.js" ></script>
+    <link href="/include/jquery.autocomplete.css" rel="stylesheet">
+<script type="text/javascript" src="/include/jquery.autocomplete.js"></script>
  
 <link href="Images/web.css?v20150217" rel="stylesheet" />
 
@@ -295,4 +295,4 @@ setTimeout("out("+i+")",1000);
 			}
 
     </script>
-<script type="text/javascript"  src="./js/yuncd.js" ></script>
+<script type="text/javascript"  src="/js/yuncd.js" ></script>
